--- a/contact.html
+++ b/contact.html
@@ -22,40 +22,30 @@
             <li><a href="contact.html">Contact Us</a></li>
            </ul>
         </nav>
+    </div>
         </header>
 
-        <main>
-            <section>
-                <!--<div class="content">-->
-                    <h2>Bringing the works of the scholars right to you</h2>
-                    <h3>The UK's largest online Islamic bookstore</h3>  
-                    <a href="" class="btn">Our Story</a>
-                <!--</div>-->
-            </section>
+    <main>
+        <section>
+        <div id="contact-me">   
+            <form>
+                <label for="name"></label>
+                <input type="text" id="name" placeholder="Name"><br>
+    
+                <label for="email"></label>
+                <input type="email" id="email" placeholder="Email"><br>
+                <br>
+                <textarea id="textarea" rows="10" cols="50" placeholder="How can we help?"></textarea><br>
+                <input type="submit" id="submit" value="Submit">
+            </form>
+           </div>
+        </section>
         </main>
 
-        <div class="flex-container">
-            <div class>
-            <img src="media/DnUQx4JXgAAIuBR.jpg">
-            </div>
-
-            <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/pd5harQvnOo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-        </div>
-       </div>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-</html>
+        
+    </body>
+    </html>
